[tool.poetry]
name = "pling"
version = "0.0.1"
description = "Pling computes the rearrangement distance between plasmids"
authors = ["Daria Frolova <daria@ebi.ac.uk>", "Leandro Lima <leandro@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/iqbal-lab-org/pling"
repository = "https://github.com/iqbal-lab-org/pling"
packages = [{include = "pling"}]
keywords = ["Plasmids", "Comparative genomics", "Genome rearrangement", "DCJ-indel distance"]

[tool.poetry.scripts]
pling = 'pling.run_pling:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
snakemake = "^7.32.4"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
